--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <head>
 	<meta charset="UTF-8">
-	<title>Home &laquo; akz's GitHub Pages</title>
+	<title>Home &laquo; akz’s GitHub Pages</title>
 </head>
 <body>
 	<header>
 		<p>Hello, World!</p>
-		<h1>Home of akz's GitHub Pages</h1>
+		<h1>Home of akz’s GitHub Pages</h1>
 	</header>
 </body>
 </html>
